# finesse3

./: CHANGELOG.rst  environment-win.yml  environment.yml  pyproject.toml
docs/: Makefile  README.md  check_missing.py  make.bat
docs/source/: appendix.rst  defs.hrst  finesse.sty  how_to_cite.rst  index.rst  indices.rst
docs/source/introduction/: index.rst
docs/source/physics/: index.rst
docs/source/usage/: cli.rst  index.rst  legacy_support.rst  model_building.rst  numerical_precision.rst  symbolics.rst
docs/source/zbiblio/: index.rst  refs.bib
docs/source/zglossary/: index.rst
ligo-commissioning-modeling-main/LHO/Measurements/: CHARD_P_coherence_20230810.txt  CHARD_P_tf_20230810.txt  CHARD_Y_coherence.txt  CHARD_Y_tf.txt  CSOFT_P_OLG.xml  CSOFT_Y_OLG.xml  DHARD_P_coherence_20230810.txt  DHARD_P_tf_20230810.txt  DHARD_Y_coherence.txt  DHARD_Y_tf.txt  DSOFT_Y_OLG.xml
ligo-commissioning-modeling-main/LHO/finesse/: LHO_POP_WFS.py  SRCL_arm_power.py  tools.py
ligo-commissioning-modeling-main/LHO/raypier/: ALS_in_air.py  LHO_ETMY_Transmon_HWS.py
ligo-commissioning-modeling-main/LHO/yaml/: lho_O4.yaml  lho_O4_gwinc.yaml  lho_addRH.yaml  lho_bhd_phase_a.yaml  lho_mcmc_RC_lengths.yaml
ligo-commissioning-modeling-main/LLO/: T_beamprofiles.py  llo_power_up.py  llo_power_up_PlotData.py  llo_power_up_rom.py  thermal.py  thermal_rom.py
ligo-commissioning-modeling-main/LLO/thermal_data/: dmdc_operators_aligo_v0.h5
ligo-commissioning-modeling-main/LLO/yaml/: llo_O4.yaml  (+2 more)
ligo-commissioning-modeling-main/ZEMAX/: LHO_coords_E2100383-v4.tex  LHO_zemax2pdf.ipynb  LHO_zemax_HAM6.txt  LLO_coords.tex  LLO_coords_E2200033-v5.tex  LLO_zemax.txt  LLO_zemax2pdf.ipynb  zemax2pdf.py
ligo-commissioning-modeling-main/follow_the_leader/: README.md  pyproject.toml  setup.cfg
ligo-commissioning-modeling-main/follow_the_leader/examples/: Example_Live_Plotting.ipynb  Example_Plot_Simulation.ipynb  Example_Run_Simulation.ipynb
ligo-commissioning-modeling-main/follow_the_leader/src/follow_the_leader/: __init__.py  actions.py  gwd_data.py  io.py  sim_data.py
ligo-commissioning-modeling-main/follow_the_leader/src/follow_the_leader/mapping_files/: L1.yaml
ligo-commissioning-modeling-main/robots/: check-yaml-file.py  get_pass.py
ligo-commissioning-modeling-main/scripts/: H1_chans.yaml  L1_chans.yaml  data_1418514918.pkl  data_munch.py
playground/graphs/: coupled_cavity.py  drmi.py  graph_sim.py  ligo.py  single_cavity.py
scripts/: examples_to_script.py
(+181 files in other folders)
