[metadata]
name = follow_the_leader
author = Aaron Goodwin-Jones
version = 0.0.1
# Pre-prototype update with [tool.setuptools_scm] 
# if useful and gets spun out into own repo
author_email = aaron.goodwinjones@gmail.com
description = Tools for comparing against LIGO data
long_description = file: README.md
url = https://git.ligo.org/IFOsim/ligo-commissioning-modeling/-/tree/main/follow_the_leader
project_urls =
    Bug Tracker = https://git.ligo.org/IFOsim/ligo-commissioning-modeling/-/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    finesse-ligo
    ifo_thermal_state 
    munch
# Can't add this or it will re-install it if it is already installed 
# which we really don't want to do as people probably have it as an editable install
# already and I don't want to wreck their enviroment. 
# ifo_thermal_state @ git+https://gitlab.com/ifosim/test-mass-thermal-state.git@main#egg=ifo_thermal_state-1a0
include_package_data=True

[options.extras_require]
docs =
    sphinx < 6
    sphinx_rtd_theme
    sphinxcontrib-bibtex
    sphinxcontrib-programoutput
    jupyter-sphinx >= 0.4
    numpydoc
    sphinxcontrib-katex
    sphinxcontrib-svg2pdfconverter
    reslate

test =
    pytest
    autoflake
    isort
    black
    docutils
    jupyter-sphinx >= 0.4

[options.packages.find]
where = src

#[options.package_data]
#* = data/**/*, parameter_files/*


[flake8]  # Annoyingly, flake8 doesn't support pyproject.toml so we put this here...
# Ignored rules.
ignore =
    ### Errors.
    # Whitespace before ':'
    E203
    # Too many leading '#' for block comment
    E266
    # Module level import not at top of file
    E402
    # Line too long
    E501
    # Do not assign a lambda expression, use a def
    E731
    # ambiguous variable name
    E741
    # missing whitespace after ','
    E231
    ### Warnings.
    # line break before binary operator (soon deprecated; see https://www.flake8rules.com/rules/W503.html)
    W503
    # Ignore local variable assigned but not used
    F841
